# server/src/modules/yellowsheets/yellowsheet.route.js
@@ -7,4 +7,6 @@ const yellowsheetController = require('./yellowsheet.controller');
 // Route to get ERP yellowsheets
 router.get('/:partnum/:revision/:layer', yellowsheetController.getErp_yspartnum);
 
+router.get('/1/:partnum/:revision/:layer', yellowsheetController.getErp_yspartnum_1);
+
 module.exports = router;
