# server/swagger_output.json
@@ -362,6 +362,39 @@
           }
         }
       }
+    },
+    "/api/yellowsheets/1/{partnum}/{revision}/{layer}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "partnum",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "revision",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "layer",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
